// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filename is truncated when it is more than max 1`] = `
<div>
  <div>
    <div>
      <div
        class="container"
        data-testid="file-name-1234"
      >
        <div
          class="preview"
        >
          <span
            class="container iconPreview Icon--preview-default"
            data-testid="Icon--preview-default"
            type="Icon--preview-default"
          >
            <svg
              aria-hidden="true"
              realfilename="file.svg"
            />
          </span>
          <div
            class="description"
            data-testid="description"
          >
            <div
              class="previewName"
            >
              attachment…ent.jpg
            </div>
            <div
              class="secondaryText"
            >
              1 KB
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders expected classes 1`] = `
<div>
  <div>
    <div>
      <div
        class="container"
        data-testid="file-name-1234"
      >
        <div
          class="preview"
        >
          <span
            class="container iconPreview Icon--preview-default"
            data-testid="Icon--preview-default"
            type="Icon--preview-default"
          >
            <svg
              aria-hidden="true"
              realfilename="file.svg"
            />
          </span>
          <div
            class="description"
            data-testid="description"
          >
            <div
              class="previewName"
            >
              attachment.jpg
            </div>
            <div
              class="secondaryText"
            >
              1 KB
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders icon when icon is specified and attachment is not downloadable 1`] = `
<div>
  <div>
    <div>
      <div
        class="container"
        data-testid="file-name-1234"
      >
        <div
          class="preview"
        >
          <span
            class="container iconPreview Icon--preview-default"
            data-testid="Icon--preview-default"
            type="Icon--preview-default"
          >
            <svg
              aria-hidden="true"
              realfilename="file.svg"
            />
          </span>
          <div
            class="description"
            data-testid="description"
          >
            <div
              class="previewName"
            >
              attachment.jpg
            </div>
            <div
              class="secondaryText"
            >
              1 KB
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders link when icon is specified and attachment is downloadable 1`] = `
<div>
  <div>
    <div>
      <div
        class="container"
        data-testid="file-name-1234"
      >
        <div
          class="preview"
        >
          <a
            class="link"
            href="path://to/file"
            target="_blank"
          >
            <span
              class="container iconPreview Icon--preview-default"
              data-testid="Icon--preview-default"
              type="Icon--preview-default"
            >
              <svg
                aria-hidden="true"
                realfilename="file.svg"
              />
            </span>
          </a>
          <div
            class="description"
            data-testid="description"
          >
            <a
              class="link"
              href="path://to/file"
              target="_blank"
            >
              <div
                class="previewName"
              >
                attachment.jpg
              </div>
            </a>
            <div
              class="secondaryText"
            >
              <a
                class="link"
                href="path://to/file"
                target="_blank"
              >
                <div>
                  <span
                    class="downloadSize"
                  >
                    1 KB
                  </span>
                  <span
                    class="downloadText"
                  >
                    Download
                  </span>
                </div>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders link when it is downloadable 1`] = `
<div>
  <div>
    <div>
      <div
        class="container"
        data-testid="file-name-1234"
      >
        <div
          class="preview"
        >
          <a
            class="link"
            href="path://to/file"
            target="_blank"
          >
            <span
              class="container iconPreview Icon--preview-default"
              data-testid="Icon--preview-default"
              type="Icon--preview-default"
            >
              <svg
                aria-hidden="true"
                realfilename="file.svg"
              />
            </span>
          </a>
          <div
            class="description"
            data-testid="description"
          >
            <a
              class="link"
              href="path://to/file"
              target="_blank"
            >
              <div
                class="previewName"
              >
                attachment.jpg
              </div>
            </a>
            <div
              class="secondaryText"
            >
              <a
                class="link"
                href="path://to/file"
                target="_blank"
              >
                <div>
                  <span
                    class="downloadSize"
                  >
                    1 KB
                  </span>
                  <span
                    class="downloadText"
                  >
                    Download
                  </span>
                </div>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders removal button when it is removable 1`] = `
<div>
  <div>
    <div>
      <div
        class="container"
        data-testid="file-name-1234"
      >
        <div
          class="preview"
        >
          <span
            class="container iconPreview Icon--preview-default"
            data-testid="Icon--preview-default"
            type="Icon--preview-default"
          >
            <svg
              aria-hidden="true"
              realfilename="file.svg"
            />
          </span>
          <div
            class="description"
            data-testid="description"
          >
            <div
              class="previewName"
            >
              attachment.jpg
            </div>
            <div
              class="secondaryText"
            >
              1 KB
            </div>
          </div>
          <span
            class="container icon Icon--close"
            data-testid="Icon--close"
            role="button"
            tabindex="0"
            type="Icon--close"
          >
            <svg
              aria-hidden="true"
              realfilename="x-stroke.svg"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders uploading text when it is uploading 1`] = `
.c0 {
  background-color: #d8dcde;
  border-radius: 0.2857142857142857rem;
  margin-top: 0.35714285714285715rem;
}

.c1 {
  height: 0.35714285714285715rem;
  background-color: #228f67;
  border-radius: 0.2857142857142857rem;
  width: 0%;
}

<div>
  <div>
    <div>
      <div
        class="container"
        data-testid="file-name-1234"
      >
        <div
          class="preview"
        >
          <span
            class="container iconPreview Icon--preview-default"
            data-testid="Icon--preview-default"
            type="Icon--preview-default"
          >
            <svg
              aria-hidden="true"
              realfilename="file.svg"
            />
          </span>
          <div
            class="description"
            data-testid="description"
          >
            <div
              class="previewName"
            >
              attachment.jpg
            </div>
            <div
              class="secondaryText"
            >
              Uploading...
            </div>
          </div>
        </div>
        <div
          class="c0"
        >
          <div
            class="c1"
            data-testid="progress-bar"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders with custom class name 1`] = `
<div>
  <div>
    <div>
      <div
        class="container custom"
        data-testid="file-name-1234"
      >
        <div
          class="preview"
        >
          <span
            class="container iconPreview Icon--preview-default"
            data-testid="Icon--preview-default"
            type="Icon--preview-default"
          >
            <svg
              aria-hidden="true"
              realfilename="file.svg"
            />
          </span>
          <div
            class="description"
            data-testid="description"
          >
            <div
              class="previewName"
            >
              attachment.jpg
            </div>
            <div
              class="secondaryText"
            >
              1 KB
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders with error message 1`] = `
.c4 {
  display: block;
  position: absolute;
  top: 4px;
  right: 4px;
  -webkit-transition: background-color 0.1s ease-in-out,color 0.25s ease-in-out;
  transition: background-color 0.1s ease-in-out,color 0.25s ease-in-out;
  border: none;
  border-radius: 50%;
  background-color: transparent;
  cursor: pointer;
  padding: 0;
  width: 28px;
  height: 28px;
  overflow: hidden;
  color: #cc3340;
  font-size: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c4:hover {
  color: #681219;
}

.c4:focus {
  outline: none;
}

.c4[data-garden-focus-visible] {
  background-color: rgba(204,51,64,0.15);
  color: #681219;
}

.c4[data-garden-focus-visible]::-moz-focus-inner {
  border: 0;
}

.c3 {
  margin: 0;
  color: #2f3941;
  font-weight: 600;
}

.c0 {
  position: relative;
  border: 1px solid;
  border-radius: 4px;
  padding: 20px 40px 20px 50px;
  line-height: 1.4285714285714286;
  font-size: 14px;
  border-color: #f5b5ba;
  background-color: #fff0f1;
  color: #8c232c;
}

.c0 .c2 {
  color: #681219;
}

.c1 {
  position: absolute;
  left: 24px;
  margin-top: 2px;
  color: #cc3340;
}

<div>
  <div>
    <div>
      <div
        class="containerError c0"
        data-garden-id="notifications.alert"
        data-garden-version="8.17.1"
        data-testid="error-message"
        role="alert"
        type="error"
      >
        <svg
          class="c1"
          focusable="false"
          height="16"
          hue="dangerHue"
          role="presentation"
          theme="[object Object]"
          viewBox="0 0 16 16"
          width="16"
        >
          <g
            fill="none"
            stroke="currentColor"
          >
            <circle
              cx="7.5"
              cy="8.5"
              r="7"
            />
            <path
              d="M7.5 4.5V9"
              stroke-linecap="round"
            />
          </g>
          <circle
            cx="7.5"
            cy="12"
            fill="currentColor"
            r="1"
          />
        </svg>
        <div
          class="previewError c2 c3"
          data-garden-id="notifications.title"
          data-garden-version="8.17.1"
        >
          attachment.jpg
        </div>
        <div
          class="secondaryTextError"
        >
          this is incorrect
        </div>
        <button
          class="c4"
          data-garden-id="notifications.close"
          data-garden-version="8.17.1"
        >
          <svg
            focusable="false"
            height="12"
            role="presentation"
            viewBox="0 0 12 12"
            width="12"
          >
            <path
              d="M3 9l6-6m0 6L3 3"
              stroke="currentColor"
              stroke-linecap="round"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`size formatting greater than or equal to 1MB displays correctly 1`] = `
<div>
  <div>
    <div>
      <div
        class="container"
        data-testid="file-name-1234"
      >
        <div
          class="preview"
        >
          <span
            class="container iconPreview Icon--preview-default"
            data-testid="Icon--preview-default"
            type="Icon--preview-default"
          >
            <svg
              aria-hidden="true"
              realfilename="file.svg"
            />
          </span>
          <div
            class="description"
            data-testid="description"
          >
            <div
              class="previewName"
            >
              attachment.jpg
            </div>
            <div
              class="secondaryText"
            >
              1 MB
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`size formatting greater than or equal to 1MB includes one decimal place precision 1`] = `
<div>
  <div>
    <div>
      <div
        class="container"
        data-testid="file-name-1234"
      >
        <div
          class="preview"
        >
          <span
            class="container iconPreview Icon--preview-default"
            data-testid="Icon--preview-default"
            type="Icon--preview-default"
          >
            <svg
              aria-hidden="true"
              realfilename="file.svg"
            />
          </span>
          <div
            class="description"
            data-testid="description"
          >
            <div
              class="previewName"
            >
              attachment.jpg
            </div>
            <div
              class="secondaryText"
            >
              1.1 MB
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`size formatting when the file size is less than one kilobyte displays 1 KB 1`] = `
<div>
  <div>
    <div>
      <div
        class="container"
        data-testid="file-name-1234"
      >
        <div
          class="preview"
        >
          <span
            class="container iconPreview Icon--preview-default"
            data-testid="Icon--preview-default"
            type="Icon--preview-default"
          >
            <svg
              aria-hidden="true"
              realfilename="file.svg"
            />
          </span>
          <div
            class="description"
            data-testid="description"
          >
            <div
              class="previewName"
            >
              attachment.jpg
            </div>
            <div
              class="secondaryText"
            >
              1 KB
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`size formatting when the file size is less than one megabyte displays file size in kilobytes 1`] = `
<div>
  <div>
    <div>
      <div
        class="container"
        data-testid="file-name-1234"
      >
        <div
          class="preview"
        >
          <span
            class="container iconPreview Icon--preview-default"
            data-testid="Icon--preview-default"
            type="Icon--preview-default"
          >
            <svg
              aria-hidden="true"
              realfilename="file.svg"
            />
          </span>
          <div
            class="description"
            data-testid="description"
          >
            <div
              class="previewName"
            >
              attachment.jpg
            </div>
            <div
              class="secondaryText"
            >
              999 KB
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
